Add mobx todo example

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <title>Preact Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link async rel="stylesheet" type="text/css" media="screen" href="./assets/styles/main.scss" />
+  <link async rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css"
+  />
   <script async src="./app/index.js"></script>
 </head>
 
